syntax="proto3";
package blocc;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "git.coinninja.net/backend/blocc/blocc";

message Block {
    string block_id = 1;
    int64 height = 2 [(gogoproto.jsontag) = "height"]; // Remove omitempty
    string prev_block_id = 3;
    int64 time = 4;
    repeated string addresses = 5 [(gogoproto.jsontag) = "address"];
    repeated string tx_ids = 6 [(gogoproto.jsontag) = "tx_id"];

    // If needed
    bytes raw = 14 [(gogoproto.casttype) = "Raw"];
    map<string, string> data = 15;
}

message Tx {
    string block_id = 1;
    int64 block_height = 2 [(gogoproto.jsontag) = "block_height"]; // Remove omitempty
    int64 block_time = 3;
    string tx_id = 4;
    int64 height = 5 [(gogoproto.jsontag) = "height"]; // Remove omitempty
    int64 time = 6;
    repeated TxIn in = 7;
    repeated TxOut out = 8;

    // If Needed
    bytes raw = 14 [(gogoproto.casttype) = "Raw"];
    map<string, string> data = 15;
}


message TxIn {
    string tx_id = 1;
    int64 height = 2 [(gogoproto.jsontag) = "height"]; // Remove omitempty

    // If we have the reference to the output
    TxOut out = 3;

    // If needed, additional metadata
    bytes raw = 14 [(gogoproto.casttype) = "Raw"];
    map<string, string> data = 15;
}

message TxOut {
    // If we can decode it
    string type = 1;
    repeated string addresses = 2 [(gogoproto.jsontag) = "address"]; // Remove omitempty;
    int64 value = 3;

    // If needed, additional metadata
    bytes raw = 14 [(gogoproto.casttype) = "Raw"];
    map<string, string> data = 15;
}

message Metric {
    string type = 1;
    string symbol = 2;
    string block_id = 3;
    string tx_id = 4;
    int64 height = 5 [(gogoproto.jsontag) = "height"]; // Remove omitempty
    int64 time = 6;

    // If needed, additional metadata
    bytes raw = 14 [(gogoproto.casttype) = "Raw"];
    map<string, string> data = 15;
}
